[tool.poetry]
name = "github-ranking"
version = "0.1.0"
description = "Github Top100 stars list of different languages."
authors = ["Your Name <you@example.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
